# repo-quest

./: .gitignore  404.html  Cargo.toml  Dioxus.toml  GUIDE.md  Makefile.toml  README.md  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: ci.yaml  pre-release.yaml  release.yaml
.github/workflows/setup/: action.yml
assets/: main.css
book/: book.toml  styles.css
book/src/: chapter_1.md
crates/repo-quest/: Cargo.toml
crates/repo-quest/src/: git_repo.rs  github_repo.rs  main.rs  quest.rs  repo.rs  stage.rs
js/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
rs/: Cargo.toml
rs/crates/guessing-game/: Cargo.toml
rs/crates/guessing-game-grader/: Cargo.toml
rs/crates/guessing-game-grader/src/: grader.rs  main.rs
rs/crates/guessing-game/src/: main.rs
rs/crates/repo-quest/: Cargo.toml  Tauri.toml
rs/crates/repo-quest/capabilities/: default.toml
rs/crates/repo-quest/icons/: icon.icns
rs/crates/repo-quest/src/: github.rs  lib.rs  main.rs  quest.rs  stage.rs  utils.rs
rs/crates/rq-cli/: Cargo.toml
rs/crates/rq-cli/src/: main.rs
rs/crates/rq-core/: Cargo.toml
rs/crates/rq-core/src/: command.rs  git.rs  github.rs  lib.rs  package.rs  quest.rs  stage.rs  template.rs
scripts/: Dockerfile  linux-build.sh  linux-run.sh
src/: git.rs  git_repo.rs  github.rs  github_repo.rs  main.rs  quest.rs  stage.rs  ui.rs
