[package]
name = "repo-quest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dioxus = { version = "0.5.1", features = ["desktop"] }
dioxus-logger = "0.5.1"
futures-util = "0.3.30"
http = "1.1.0"
octocrab = "0.38.0"
parking_lot = "0.12.3"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-retry = "0.3.0"
toml = "0.8.15"
tracing = "0.1.40"

[profile.release]
strip = true
lto = true