[package]
name = "repo-quest"
version = "0.1.7"
edition = "2021"
default-run = "repo-quest"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = ["config-toml"] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["config-toml", "devtools"] }
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true }
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.19", features = ["derive", "typescript"] }
rq-core = { path = "../rq-core" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
