[package]
name = "rq-core"
version = "0.1.7"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures-util = "0.3.30"
home = "0.5.9"
http = "1.1.0"
octocrab = "0.38.0"
parking_lot = "0.12.3"
regex = "1.10.5"
tokio = { workspace = true, features = ["macros"] }
tokio-retry = "0.3.0"
toml = "0.8.15"
specta = { workspace = true, features = ["serde_json", "derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
flate2 = "1.0.33"
async-trait = "0.1.82"
semver = { version = "1.0.23", features = ["serde"] }
cfg-if = "1.0.0"
shlex = "1.3.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
